# openGemini

./: .commitlint.yaml  .dockerignore  .gitignore  .goreleaser.yaml  ADOPTERS.md  CODE_OF_CONDUCT.md  COMMUNITY_MEMBERSHIP.md  COMMUNITY_MEMBERSHIP_CN.md  CONTRIBUTION.md  CONTRIBUTION_CN.md  Dockerfile.nightly  MAINTAINERS.md  Makefile  Makefile.common  Open_Source_Software_Notice.md  README.md  README_CN.md  ROADMAP.md  RoadMap.md  build.py  codecov.yml  commitlint.config.js  go.mod  go.sum  test.go
.claude/: skills
.github/: pull_request_template.md
.skill/: README.md  adding-skills.md  platforms.md
app/: command.go  command_test.go  common.go  common_test.go  operation.go  operation_test.go  server.go  server_test.go
config/: monitor.conf  openGemini.conf  openGemini.singlenode.conf  weakpasswd.properties
coordinator/: context.go  coordinator.go  drop_series_executor.go  drop_series_executor_test.go  meta_executor.go  meta_executor_test.go  points_writer.go  points_writer_test.go  record_wirter.go  record_writer.go  record_writer_test.go  shard_mapper.go  shard_mapper_test.go  show_tag_keys_executor.go  show_tag_keys_executor_test.go  show_tag_values_executor.go  show_tag_values_executor_test.go  statement_executor.go  stream.go  stream_test.go  subscriber.go  subscriber_test.go  write_helper.go  write_helper_test.go
docker/: Dockerfile  README.md
docker_dir/: Dockerfile
engine/: agg_tagset_cursor.go  agg_tagset_cursor_test.go  aggregate_cursor.go  (+97 more)
python/mcp/: README.md  pyproject.toml
python/mcp/mcp_openGemini/: __init__.py  config.py  server.py
(+2404 files in other folders)
